deploy/base/rest-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api
  namespace: k8sgateway
  labels:
    app.kubernetes.io/name: rest-api
    app.kubernetes.io/part-of: k8sgateway
spec:
  selector:
    app.kubernetes.io/name: rest-api
  ports:
    - name: http
      port: 8080
      targetPort: http
