deploy/base/rest-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rest-api
  namespace: k8sgateway
  labels:
    app.kubernetes.io/name: rest-api
    app.kubernetes.io/part-of: k8sgateway
spec:
  parentRefs:
    - name: main
      namespace: k8sgateway
  hostnames:
    - api.127.0.0.1.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rest-api
          port: 8080
